--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.mohamedelzarei.cloud/"
+baseURL = "https://mohamedelzarei.cloud/"
 title = "Mohamed Elzarei"
 theme = "harbor"
 
